<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/coverView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:maxWidth="96sp"
                            android:maxHeight="96sp"
                            android:minWidth="96dp"
                            android:minHeight="96dp" />

                        <Button
                            android:id="@+id/buttonSetCover"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/button_cover" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/field_title" />

                        <EditText
                            android:id="@+id/editTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_title"
                            android:inputType="textShortMessage" />

                        <TextView
                            android:id="@+id/textAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/field_author" />

                        <EditText
                            android:id="@+id/editAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_author"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_publisher" />

                <EditText
                    android:id="@+id/editPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_publisher" />

                <TextView
                    android:id="@+id/textEdition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_edition" />

                <EditText
                    android:id="@+id/editEdition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_edition"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textDateBought"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_date_bought" />

                <EditText
                    android:id="@+id/editDateBought"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_date_bought"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textYearPublished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_year_published" />

                <EditText
                    android:id="@+id/editYearPublished"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_year_published"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_language" />

                <EditText
                    android:id="@+id/editLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_language"
                    android:inputType="textNoSuggestions" />

                <TextView
                    android:id="@+id/textPages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_pages" />

                <EditText
                    android:id="@+id/editPages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_pages"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textISBN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_isbn" />

                <EditText
                    android:id="@+id/editISBN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_isbn"
                    android:inputType="textNoSuggestions|number" />

                <TextView
                    android:id="@+id/textRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_rating" />


                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/textComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_comments" />

                <EditText
                    android:id="@+id/editComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_comments"
                    android:inputType="textMultiLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_save" />

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_cancel" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>